# arduino_ci

./: .gitignore  Cargo.toml  README.MD  package-lock.json  tauri.conf.json
.github/workflows/: release.yml
.zed/: tasks.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: arduinoCli.js
frontend/src/components/: AppHeader.jsx  ComPortSelector.jsx  LibraryManager.jsx  LibsTab.jsx  LogPanel.jsx  MainTab.jsx  MainWindow.jsx  ProjectSelector.jsx  SerialTab.jsx  SettingsTab.jsx  TrayIcon.jsx
frontend/src/utils/: runCliJob.js
src/: cli_exec.rs  main.rs  models.rs  serial_runtime.rs
