[package]
name = "arduino_ci"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2.4", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-build = "2.4"
tokio = { version = "1.0", features = ["full"] }
rfd = "0.14"
serialport = "4.6"

[build-dependencies]
tauri-build = { version = "2.4" }
